# protocheck-tonic-svelte-example

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/: Cargo.toml  build.rs
server/proto/greeter/: greeter.proto
server/src/: main.rs
src/: app.html
src/routes/: +layout.svelte  +page.svelte
src/styles/: app.css  base.css
