[package]
name = "server"
publish = false
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
prost = "0.14"
bytes = "1"
tower = "0.5"
tonic = "0.14"
http = "1"
tonic-prost = "0.14"
protocheck = "0.1.11"
futures = "0.3"
tonic-web = "0.14"
tower-http = { version = "0.6", features = ["cors"] }
proto-types = "0.1.11"
tonic-reflection = "0.14"

[build-dependencies]
tonic-prost-build = "0.14.2"
protocheck-build = "0.1.11"
